--- a/IF ELSE ASSIGNMNETS/index.html
+++ b/IF ELSE ASSIGNMNETS/index.html
@@ -7,8 +7,21 @@
 </head>
 <body>
     
+<!-- question no 1  -->
+<!-- 
+<input type="text"  id="input">
+<button onclick="yourAge()">submit</button>
+ -->
 
+<!-- question no 2  -->
 
+<!-- <input type="text" id="input-one">
+<button onclick="checkNumber()">SUBMIT</button>
+ -->
+<!-- question no 3  -->
+
+<!-- <input type="text"  id="input">
+<button onclick="yourAge()">submit</button> -->
     <script src="./app.js"></script>
 </body>
 </html>
